--- a/paper/report.bib
+++ b/paper/report.bib
@@ -486,3 +486,14 @@
   series={Adaptive Optics VII},
   organization={SPIE}
 }
+
+@inproceedings{lozi2022,
+  title={AO3000 at Subaru: Combining for the first time a NIR WFS using First Light’s C-RED ONE and ALPAO’s 64x64 DM},
+  author={J.~Lozi and K.~Ahn and C.~Clergeon and V.~Deo and O.~Guyon and T.~Hattori and Y.~Minowa and S.~Nishiyama and Y.~Ono and S.~Vievard},
+  journal={Proceeding SPIE, SPIE Astronomical Telescopes + Instrumentation},
+  year={2022},
+  volume={12185},
+  number={111},
+  series={Adaptive Optics VIII},
+  organization={SPIE}
+}
