--- a/paper/report.tex
+++ b/paper/report.tex
@@ -60,11 +60,11 @@
 
 \section{Introduction}\label{sec:intro}
 
-In recent decades exoplanet science has advanced tremendously, with over \num{5000} confirmed planet detections\cite{akeson2013}. These planets have predominantly been discovered and characterized using the indirect methods of transit photometry or radial velocity analysis\cite{perryman2018}. High-contrast imaging, or direct imaging, complements the phase space of exoplanet size, masses, and orbits that these indirect methods probe and is the only way to directly observe exoplanet spectra and orbits. To accomplish the difficult task of imaging a planet around another star, a combination of high-performance instrumentation, observational techniques, and post-processing methods must be employed.
+In recent decades exoplanet science has advanced tremendously, with over \num{5000} confirmed planet detections\cite{akeson2013}. These planets have predominantly been discovered and characterized using the indirect methods of transit photometry or radial velocity analysis\cite{perryman2018}. High-contrast imaging, or direct imaging, complements the phase space of exoplanet size, masses, and orbits that these indirect methods probe and is the only way to directly observe exoplanet spectra and orbits. To accomplish the difficult task of imaging a planet around another star, a combination of high-performance instrumentation, like large diameter telescopes and low-noise detectors, observational techniques, like angular differential imaging, and post-processing algorithms must be all be employed.
 
-In the past few years, high-contrast instruments like SPHERE\cite{petit2014}, GPI\cite{macintosh2014}, and SCExAO\cite{jovanovic2015a} have greatly advanced the field of direct imaging. These instruments typically operate in the near-infrared (near-IR), from Y to L band, for two reasons. First, the increased brightness of thermal emission of exoplanets in the near-IR lowers the relative flux ratio between the star and the exoplanet (contrast) and ultimately improves the detection sensitivity to smaller planets. Second, in the near-IR, wavefront control with adaptive optics (AO) is easier than in the visible. This is because the same path length error is a smaller phase error in the near-IR than the visible, simply due to the wavelength difference.
+In the past decade, high-contrast instruments like SPHERE\cite{petit2014}, GPI\cite{macintosh2014}, and SCExAO\cite{jovanovic2015a} have greatly advanced the field of direct imaging. These instruments typically operate in the near-infrared (near-IR), from Y to L band, for two reasons. First, the increased brightness of thermal emission of exoplanets in the near-IR lowers the relative flux ratio between the star and the exoplanet (contrast) and ultimately improves the detection sensitivity to smaller planets. Second, in the near-IR, wavefront control with adaptive optics (AO) is easier than in the visible. This is because the same path length error is a smaller phase error in the near-IR than the visible, simply due to the wavelength difference.
 
-Despite the challenges of high-performance, diffraction-limited imaging at shorter wavelengths, there are significant motivations for extending high-contrast imaging into the visible. First is the detection of reflected light from exoplanets, which is considered the most promising method of imaging terrestrial planets\cite{traub2010}. Second, an important component of improving planet-formation theory is studying the birth of exoplanets in protoplanetary disks, which can be imaged using light reflected from small dust grains suspended in the gas disk. Such observations of protoplanetary disks complement radio imaging of the debris and probe smaller angles, better angular resolutions, and different grain chemistries than near-IR reflected light imaging. Lastly, using H$\alpha$ emission (\qty{656.28}{\nano\meter}) as a tracer for accretion allows direct imaging of matter in-flows onto forming exoplanets\cite{currie2022}, as well as studying matter out-flows in giant stars\cite{norris2020}.
+Despite the challenges of high-performance, diffraction-limited imaging at shorter wavelengths, there are significant motivations for extending high-contrast imaging into the visible. First is the detection of reflected light from exoplanets, which is considered the most promising method of imaging terrestrial planets\cite{traub2010}. Second, an important component of improving planet-formation theory is studying the birth of exoplanets in protoplanetary disks, which can be imaged using light reflected from small dust grains suspended in the gas disk. Such observations of protoplanetary disks complement radio imaging of the debris and probe smaller angles, better angular resolutions, and different grain chemistries than near-IR reflected light imaging. Lastly, using H$\alpha$ emission (\qty{656.28}{\nano\meter}) as a tracer for accretion allows direct imaging of matter in-flows onto forming exoplanets\cite{currie2022}, as well as studying matter out-flows in giant stars\cite{norris2020}. Some of these science cases are out of reach of current ground-based telescopes, but it is still important to understand the limitations of the techniques and how they can be applied to future ground and space-based telescopes.
 
 The Visible Aperture-Masking Polarimetric Imager/Interferometer for Resolving Exoplanetary Signatures (VAMPIRES)\cite{norris2015} is an optical dual-beam imager for the Subaru Coronagraphic Extreme Adaptive Optics (SCExAO) instrument on the Subaru telescope. A schematic of SCExAO/VAMPIRES is shown in \autoref{fig:bench}. VAMPIRES operates between \qtyrange{600}{800}{\nano\meter} with capabilities for polarimetric imaging\cite{norris2020}, H$\alpha$ imaging\cite{uyama2020}, and focal plane wavefront sensing\cite{vievard2020,vievard2022,deo2022}. VAMPIRES also has a suite of non-redundant sparse aperture masks for sub-diffraction-limited interferometric imaging. For this work, though, we will focus on the traditional and polarimetric imaging modes.
 
@@ -82,9 +82,9 @@ This report details our design and deployment of a visible-light coronagraph for
 
 \section{Methods}\label{sec:methods}
 
-\subsection{Designing the Coronagraph}\label{sec:design}
+\subsection{Coronagraph Design}\label{sec:design}
 
-We used the open-source python package \texttt{HCIPy}\cite{por2018} for simulating our coronagraph design with Fourier optics. We defined our wavefronts on a rasterized image of the SCExAO pupil sampled on a 256x256 pixel grid (\autoref{fig:pupil}a). Initially, we do not introduce any wavefront errors. We used existing pupil masks to determine the beam diameter in VAMPIRES precisely (\qty{7.03}{\milli\meter}), which corresponds to a focal ratio of F/28.4 for the coronagraph. With \texttt{HCIPy}, we use a Fraunhofer propagator with this focal ratio to form the intermediate focal plane, where the focal plane mask will be inserted. VAMPIRES has a FOV of \ang{;;3}$\times$\ang{;;3}, however, for our exploratory simulations we only calculated the first 16 airy rings (\autoref{fig:pupil}b). The focal plane masks are hard-edged circles and were modeled using a circular apodizer with either 0\% or 0.1\% transmission. We designed four focal plane masks with radii of \qtylist{38.6;57.9;96.5;135}{\micro\meter}, respectively. These radii correspond to \numlist{2;3;5;7} $\lambda/D$ at \qty{750}{\nano\meter}, or \qtylist{35.9;53.9;89.8;126}{\milliarcsecond}. The focal plane after the mask was propagated to the next pupil plane, where the Lyot stop apodized the wavefront.
+We used the open-source python package \texttt{HCIPy}\cite{por2018} for simulating our coronagraph design with Fourier optics. We defined our wavefronts on a rasterized image of the SCExAO pupil sampled on a 256x256 pixel grid (\autoref{fig:pupil}a). Initially, we do not introduce any wavefront errors. We used existing pupil masks to determine the beam diameter in VAMPIRES precisely (\qty{7.03}{\milli\meter}), which corresponds to a focal ratio of F/28.4 for the coronagraph. With \texttt{HCIPy}, we use a Fraunhofer propagator with this focal ratio to form the intermediate focal plane, where the focal plane mask will be inserted. VAMPIRES has a FOV of \ang{;;3}$\times$\ang{;;3}, however, for our exploratory simulations we only calculated the first 16 airy rings, or $\sim$\qty{38}{\milliarcsecond} (\autoref{fig:pupil}b). The focal plane masks are hard-edged circles and were modeled using a circular apodizer with either 0\% or 0.1\% transmission. We designed four focal plane masks with radii of \qtylist{38.6;57.9;96.5;135}{\micro\meter}, respectively. These radii correspond to \numlist{2;3;5;7} $\lambda/D$ at \qty{750}{\nano\meter}, or \qtylist{35.9;53.9;89.8;126}{\milliarcsecond}. The focal plane after the mask was propagated to the next pupil plane, where the Lyot stop apodized the wavefront.
 
 \begin{figure*}
    \centering
@@ -104,7 +104,7 @@ We evaluated the performance and quality of our simulations from the raw contras
    \caption{Simulated raw 5$\sigma$ contrast curves for an unocculted PSF (black line) and for each focal plane mask size (orange to purple lines). These curves are calculated from images simulated with \texttt{HCIPy}. The mask inner working angles are marked by vertical dotted lines}\label{fig:sim-contrast}
 \end{figure*}
 
-From the raw contrast curves, we found that the CLC-2 mask does not attenuate the PSF that well, especially at close angles ($<$\ang{;;0.4}). The CLC-3 mask only offers a factor of a few improved contrast compared to the unocculted PSF. We found no significant performance differences between the CLC-5 and CLC-7 masks, both showing an improvement of an order of magnitude of sensitivity throughout the FOV. The typical read noise and non-common path wavefront errors in VAMPIRES are expected to ultimately limit our contrast at large separations. As we will describe in \autoref{sec:install}, the focal plane masks are diced from a single piece of glass producing four substrates. So we decided to construct all four mask sizes with two variations each: one partially transmissive (0.1\%) and the other fully opaque.
+From the raw contrast curves, we found that the CLC-2 mask does not attenuate the PSF well, especially at close angles ($<$\ang{;;0.4}). The CLC-3 mask only offers a factor of a few improved contrast compared to the unocculted PSF. We found no significant performance differences between the CLC-5 and CLC-7 masks, both showing an improvement of an order of magnitude of sensitivity throughout the FOV. The typical read noise and non-common path wavefront errors in VAMPIRES are expected to ultimately limit our contrast. As we will describe in \autoref{sec:install}, the focal plane masks are diced from a single piece of glass producing four substrates. We constructed all four mask sizes with two variations each: one partially transmissive (0.1\%) and the other fully opaque.
 
 \subsection{Construction and Installation}\label{sec:install}
 
@@ -140,9 +140,9 @@ A common problem with coronagraphic imaging is accurately determining the flux a
 
 \subsection{Coronagraphic Characterization}
 
-We characterized our coronagraph by measuring the Lyot stop throughput, focal plane mask inner working angle (IWA), and focal plane mask transmission. The Lyot stop throughput is proportional to the unobstructed area of the mask compared to the pupil. From our CAD models, we estimated the throughput as 63.7\% using the ratio of unobstructed areas between the Lyot stop and the SCExAO pupil. We measured the throughput using the pupil-imaging camera with the calibration light source, comparing the total intensity measured with a mirror in the pupil wheel (100\% of the incident light) versus the Lyot stop (blocked light only). We calculated a relative throughput of 65.7\%.
+We characterized our coronagraph by measuring the Lyot stop throughput, focal plane mask inner working angle (IWA), and focal plane mask transmission. The Lyot stop throughput is proportional to the unobstructed area of the mask compared to the pupil. From our CAD models, we estimated the throughput as 63.7\% using the ratio of unobstructed areas between the Lyot stop and the SCExAO pupil. We measured the throughput using the pupil-imaging camera with the calibration light source, comparing the total intensity measured with a mirror in the pupil wheel (100\% of the incident light) versus the Lyot stop (blocked light only). We calculated a geometric throughput of 65.7\%, which is close to the expected value.
 
-To calculate the IWA we need to measure the off-axis coronagraphic throughput for each mask. We measured this by gradually moving the focal plane mask off-axis from the calibration source, taking images at each step. The fluxes from all of the images were normalized between 0 for the on-axis flux, and 1 for the maximum off-axis flux (\autoref{fig:throughput}). We interpolated the IWA using the 50\% throughput point from each curve (\qtylist{36;55;92;129}{\milliarcsecond}, respectively). These IWAs are in good agreement with the radii of the masks, as shown in \autoref{tab:coronagraph}.
+To calculate the IWA we measured the coronagraphic throughput for each mask by gradually moving the focal plane mask off-axis from the calibration source, taking images at each step. The fluxes from all of the images were normalized between 0 for the on-axis flux, and 1 for the maximum off-axis flux (\autoref{fig:throughput}). We interpolated the IWA using the 50\% throughput point from each curve (\qtylist{36;55;92;129}{\milliarcsecond}, respectively). These IWAs are in good agreement with the radii of the masks, as shown in \autoref{tab:coronagraph}.
 
 Lastly, we verified the transmission of the focal plane masks by taking data without the Lyot stop inserted. By removing the Lyot stop, we no longer reject the light blocked by the mask. We measured the total flux behind the masks and compared that to the total flux in the same radius around the unobstructed PSF. Our masks were designed for 0.1\% transmission and the average transmission measured with the calibration source is 0.06\%.
 
@@ -186,35 +186,35 @@ From here we created raw contrast curves the same way as in \autoref{sec:design}
 
 From the raw contrast curves (\autoref{fig:contrast}), we note similar performance between all the mask sizes. At \ang{;;0.1}, the coronagraph achieves a raw contrast of $\sim$ \num{e-3}, and background-limited contrast beyond $\sim$\ang{;;1} of $\sim$\num{e-5}. Throughout the entire FOV, the coronagraphs attenuate the light by \numrange{0.2}{1} orders of magnitude. We expect the diffraction control relative to the unocculted PSF to be consistent throughout the FOV until the noise limit is reached, as in \autoref{fig:sim-contrast}. Here we see very little diffraction control beyond \ang{;;1}, suggesting residual wavefront errors are dominating the noise.
 
-These bench contrast curves represent an ideal observing scenario (i.e., high S/N, no seeing). The unocculted data is particularly unrealistic because we let the detector saturate to maintain the same exposure settings as the coronagraphic data. This is not typical for on-sky observations, and cannot be done at all with EM gain, sacrificing the benefits of the EM process. For high S/N observations with the coronagraph, the limiting brightness will be the satellite spots. So, for example, with \qty{50}{\nano\meter} astrogrid we improve our background-limited contrast by $10^{1.52}$ compared to the same data taken without the coronagraph with the exposure setting adjusted to avoid saturation. Without using the astrogrid, the long-exposure limit will be reached when the speckle halo saturates, which offers $\sim$\num{e2} improved contrast, which means VAMPIRES can observe targets $\sim$100 times brighter than its current limits.
+These bench contrast curves represent an ideal observing scenario (i.e., high S/N, no seeing), although we did not attempt to ``tune up'' the PSF ahead of time to reduce the testbed wavefront errors, which limit our detection sensitivity. The unocculted data is particularly unrealistic because we let the detector saturate to maintain the same exposure settings as the coronagraphic data. This is not typical for on-sky observations, and cannot be done at all with EM gain, sacrificing the benefits of the EM process. For high S/N observations with the coronagraph, the limiting brightness will be the satellite spots. So, for example, with \qty{50}{\nano\meter} astrogrid we improve our background-limited contrast by $10^{1.52}$ compared to the same data taken without the coronagraph with the exposure setting adjusted to avoid saturation. Without using the astrogrid, the long-exposure limit will be reached when the speckle halo saturates, which offers $\sim$\num{e2} improved contrast, which means VAMPIRES can observe targets $\sim$100 times brighter than its current limits.
 
 \begin{figure*}
    \centering
    \includegraphics[width=0.9\textwidth]{figures/saturated_bench_20220628_curves}
-   \caption{Raw 5$\sigma$ contrast curves measured from \qty{2}{\second} of testbed data. These curves account for small-sample statistics and have no PSF subtraction. The black curve is the non-coronagraphic contrast measured from a saturated PSF (which has been masked out), while the orange through purple curves correspond to each focal plane mask. The IWA for each curve is marked with a dotted vertical line. The astrogrid speckles are also masked out.}\label{fig:contrast}
+   \caption{Raw 5$\sigma$ contrast curves measured from \qty{2}{\second} (\num{100} frames) of testbed data. These curves account for small-sample statistics and have no PSF subtraction. The black curve is the non-coronagraphic contrast measured from a saturated PSF (which has been masked out), while the orange through purple curves correspond to each focal plane mask. The IWA for each curve is marked with a dotted vertical line. The astrogrid speckles are also masked out.}\label{fig:contrast}
 \end{figure*}
 
 \subsection{On-sky results}\label{sec:onsky}
 
 We have not had any opportunities to use the coronagraph in good conditions for testing; most of our on-sky tests had $>$\ang{;;1.5} seeing. Our best data is from May 12, 2022, of target HIP 56083. We used a \qty{50}{\nano\meter} amplitude astrogrid with a separation of 15.5 $\lambda/D$, the same as our testbed data. An example coronagraphic image is shown in \autoref{fig:satellite-spots}b. We used 300 EM gain with 200 ms exposure times, median combining 100 frames for a total of \qty{20}{\second} of integration time. This caused significant blurring from seeing but was necessary to achieve a high signal-to-noise ratio (S/N). In the future, we want to investigate further the trade-off between S/N and sharpness from shorter exposure times on coronagraphic contrast.
 
-We constructed 5$\sigma$ contrast curves for each focal plane mask size following the same procedure as the testbed data (\autoref{fig:onsky-contrast}). Note for these observations we used a tighter field of view (256$\times$256) which limits the max separation to \ang{;;0.75}. We used the same scaling for the satellite spot photometry as fit from the testbed data ($10^{-1.52}$) and also masked out the satellite spots. At \ang{;;0.1}, all masks have a raw contrast around $10^{-2.5}$ and drop off to \num{e-4} at \ang{;;0.75}. The on-sky contrast is around an order of magnitude worse than the testbed data throughout the cropped \ang{;;0.75}$\times$\ang{;;0.75} FOV. We expect that under better observing conditions we could achieve many times better contr/ast performance with high S/N data aligned and stacked using lucky imaging for improved sharpness.
+We constructed 5$\sigma$ contrast curves for each focal plane mask size following the same procedure as the testbed data (\autoref{fig:onsky-contrast}). Note for these observations we used a tighter field of view (256$\times$256) which limits the max separation to \ang{;;0.75}. We used the same scaling for the satellite spot photometry as fit from the testbed data ($10^{-1.52}$) and also masked out the satellite spots. At \ang{;;0.1}, all masks have a raw contrast around $10^{-2.5}$ and drop off to \num{e-4} at \ang{;;0.75}. The on-sky contrast is around an order of magnitude worse than the testbed data throughout the cropped \ang{;;0.75}$\times$\ang{;;0.75} FOV. We expect that under better observing conditions we could achieve many times better contrast performance with high S/N data aligned and stacked using lucky imaging for improved sharpness.
 
 \begin{figure*}
    \centering
    \includegraphics[width=0.9\textwidth]{figures/HIP56083_20220512_curves}
-   \caption{Raw 5$\sigma$ contrast curves measured from \qty{20}{\second} of on-sky data of HIP 56083. These data were obtained on May 12, 2022 through the 750-50 filter with 300 EM gain and 200 ms exposures. The orange through purple curves correspond to each focal plane mask. The IWA for each curve is marked with a dotted vertical line. The astrogrid speckles are masked out.}\label{fig:onsky-contrast}
+   \caption{Raw 5$\sigma$ contrast curves measured from \qty{20}{\second} (\num{100} frames) of on-sky data of HIP 56083. These data were obtained on May 12, 2022, through the 750-50 filter with 300 EM gain and 200 ms exposures. The orange through purple curves correspond to each focal plane mask. The IWA for each curve is marked with a dotted vertical line. The astrogrid speckles are masked out.}\label{fig:onsky-contrast}
 \end{figure*}
 
 \section{Conclusions}\label{sec:conclusions}
 
-In this paper, we have described the design, construction, and deployment of a visible-light Lyot coronagraph on SCExAO/VAMPIRES. This coronagraph attenuates $\sim$2 orders of magnitude of light, greatly improving the dynamic range of the EM-CCDs used on VAMPIRES with max EM gain. Additionally, the diffraction control will improve high-contrast performance, which has important applications in the optical for exoplanet science, both companion and protoplanetary disk imaging, as well as H$\alpha$ imaging. The coronagraph was approved for open-use observation starting in the 2022B observing semester.
+In this paper, we have described the design, construction, and deployment of a visible-light Lyot coronagraph on SCExAO/VAMPIRES. This coronagraph attenuates $\sim$2 orders of magnitude of light, greatly improving the dynamic range of the EM-CCDs used on VAMPIRES with maximum EM gain. Additionally, the diffraction control will improve high-contrast performance, which has important applications in the optical for exoplanet science, both companion and protoplanetary disk imaging, as well as H$\alpha$ imaging. The coronagraph was approved for open-use observation starting in the 2022B observing semester.
 
 Four partially transmissive focal plane masks were installed with IWAs of \qtylist{36;55;92;129}{\milliarcsecond}, respectively. The Lyot stop has a measured throughput of 65.7\%. During operation, the coronagraph uses ``astrogrid'' artificial speckles for photometric and astrometric calibration. We tested the coronagraph using the SCExAO internal source for characterizing the IWA, Lyot stop throughput, satellite spot relative flux, and measured contrast curves for each mask size using \qty{2}{\second} of median-combined data. The contrast was similar for each mask size, spanning \num{e-3} to \num{e-5} from \ang{;;0.1} to $>$\ang{;;0.8}, offering 0.2 to 1 orders of magnitude improvement over saturated non-coronagraphic images. We found the background limit for our detectors was $\sim$\num{3e-6} (5$\sigma$). We also measured the contrast for each mask size using \qty{20}{\second} of median-combined data of HIP 56083 in poor seeing conditions. This data is highly limited by the seeing halo, and achieves raw 5$\sigma$ contrast of \num{e-2} to \num{e-4} from \ang{;;0.1} to \ang{;;0.75}.
 
-In the future, as wavefront control improves for SCExAO, we want to explore phase-based focal plane masks such as the four-quadrant phase mask (4QPM)\cite{rouanFourQuadrantPhase2007}. Phase-based masks offer improved contrast over amplitude-based designs like the classic Lyot style, but are highly sensitive to pointing errors and thus require fine tip-tilt control for effective use\cite{huby2017}. The fine tip-tilt control is expected to improve on SCExAO during the upgrades to the facility AO system, AO188\cite{minowa2010}. We are also interested in exploring apodized Lyot stops to achieve similar or improved performance in the presence of aberrations without sacrificing as much throughput.
+In the future, we want to implement various speckle control algorithms which have been demonstrated with SCExAO for improving post-coronagraphic contrast. The ``DrWHO'' focal plane wavefront sensing algorithm\cite{skaf2021} reduces the effects of non-common path aberrations (NCPAs) between the wavefront sensor and VAMPIRES by altering the wavefront sensor reference for convergence of the AO loop. DrWHO has been demonstrated on-sky\cite{skaf2022} and coronagraphically in the near-IR\cite{skaf2021}. Another technique for improving post-coronagraphic contrast is spatial linear dark field control (LDFC), which uses electric field conjugation to ``learn'' the NCPAs while on a bright reference star, and then removes NCPAs from our science target using the learned NCPAs. LDFC has been demonstrated with the near-IR coronagraphs on SCExAO\cite{ahn2022}.
 
-In addition to hardware improvements, we also look forward to making use of various speckle control algorithms which have been demonstrated with SCExAO for improving post-coronagraphic contrast. The ``DrWHO'' focal plane wavefront sensing algorithm\cite{skaf2021} reduces the effects of non-common path aberrations (NCPAs) between the wavefront sensor and VAMPIRES by altering the ideal reference used during wavefront correction. DrWHO has been demonstrated on-sky\cite{skaf2022} and coronagraphically in the near-IR\cite{skaf2021}. Another technique for improving post-coronagraphic contrast is spatial linear dark field control (LDFC), which uses electric field conjugation to remove NCPAs from one-half of the focal plane. LDFC has been demonstrated with the near-IR coronagraphs on SCExAO\cite{ahn2022}.
+In addition to implementing advanced wavefront control algorithms, there are hardware changes planned for the facility AO system (AO188\cite{minowa2010}) which will improve wavefront control on SCExAO\cite{lozi2022}. With this improved wavefront control, we want to explore phase-based focal plane masks such as the four-quadrant phase mask (4QPM)\cite{rouanFourQuadrantPhase2007}. Phase-based masks offer improved contrast over amplitude-based designs like the classic Lyot style, but are highly sensitive to pointing errors and thus require fine tip-tilt control for effective use\cite{huby2017}. We are also interested in exploring apodized Lyot stops to achieve similar or improved performance in the presence of aberrations without sacrificing as much throughput.
 
 %%%%% Appendix %%%%%
 
