remove page numbers

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -16,7 +16,7 @@
 \DeclareSIUnit\milliarcsecond{mas}
 
 % Option to view page numbers
-\pagestyle{plain} % change to \pagestyle{plain} for page numbers
+% \pagestyle{plain} % change to \pagestyle{plain} for page numbers
 
 %%%%% Authors %%%%%
 
